k8s/initiatives-db.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: initiatives-db
  labels:
    app: mssql
    product: octava
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
      product: octava
      tier: backend
  template:
    metadata:
      labels:
        app: mssql
        product: octava
        tier: backend
    spec:
      containers:
      - name: mssql
        image: coeoctava.azurecr.io/initiatives-db
        ports:
        - containerPort: 1433
