k8s/initiatives-webapi.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: initiatives-webapi
  labels:
    app: initiatives-webapi
    technology: dotnetcore
    tier: frontend
    product: octava
spec:
  replicas: 1
  selector:
    matchLabels:
      app: initiatives-webapi
      technology: dotnetcore
      tier: frontend
      product: octava
  template:
    metadata:
      labels:
        app: initiatives-webapi
        technology: dotnetcore
        tier: frontend
        product: octava
    spec:
      containers:
      - name: initiatives-webapi
        image: coeoctava.azurecr.io/initiatives-webapi:v1.0.1
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: secret-volume
          mountPath: "/etc/secrets"
          readOnly: true
      volumes:
      - name: secret-volume
        secret:
          secretName: initiatives-webapi-config
