k8s/initiatives-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: initiatives-db
  labels:
    app: initiatives-db
    technology: mssql
    product: octava
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 1433
  selector:
    app: initiatives-db
    technology: mssql
    product: octava
    tier: backend
