k8s/wordpress-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db
  labels:
    app: mysql
    product: octava
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: mysql
    product: octava
    tier: backend
