k8s/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
    tier: frontend
    product: octava
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: wordpress
    tier: frontend
    product: octava
